// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX bvKseS"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX cnplXy"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX ecvmBJ"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX gAHlsU"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb bMRdNC"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX epqKyZ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb jvxDBb"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje dnuoWJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX cLBuna"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb cqMuvY"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX iaIcrG"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb fsOmnJ"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX kfTBcx"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa jCnOyj sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb kazFXV"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa jCnOyj sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX fxFlla"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX fHzXmT"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX bBDOyb"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX hnehcu"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX hXjSPZ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX jXbZrc"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX cWLveo"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX DlsaF"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX iMYdOq"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX hzmfaz"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX gGdFjZ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX bbuueY"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX fxFlla"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX fHzXmT"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX bBDOyb"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX hnehcu"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX hXjSPZ"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX jXbZrc"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX cWLveo"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX DlsaF"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX iMYdOq"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX hzmfaz"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX gGdFjZ"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX bbuueY"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX hXjSPZ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-ifAKCX hXjSPZ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    News
  </p>
</button>
`;
